--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ dependencies {
     implementation group: 'org.telegram', name: 'telegrambots', version: '6.9.7.1'
 // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
-
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 }
 
 test {
